editor-components/stats/stats19/stats19.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  .max-content .wrapper {
    gap: var(--composer-gap-lg);

    > * {
      margin-bottom: 0;
    }

    .subtitle,
    .title,
    .description {
      content: "";
    }

    .button-container {
      display: flex;
      flex-wrap: wrap;
      gap: var(--composer-gap-sm);
      align-self: center;
      

      .button,
      .button-text {
        content: "";
      }
    }

    .stats-grid {
      gap: var(--composer-gap-lg);

      .stat-item {
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-sm);
        align-items: flex-start;
        text-align: left;

        .stat-header {
          display: flex;
          align-items: flex-start;
          gap: var(--composer-gap-md);

          .stat-value {
            display: flex;

            .stat-prefix,
            .stat-number,
            .stat-suffix {
              font-size: 4rem;
              color: var(--composer-primary-color);
            }
          }

          .stat-title {
            color: var(--composer-font-color-primary);
            align-self: center;
          }
        }

        .stat-subtitle {
          color: var(--composer-font-color-primary);
        }

        .stat-desc {
          color: var(--composer-font-color-primary);
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container .max-content .wrapper .stats-grid {
    gap: var(--composer-gap-md);
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container .max-content .wrapper .stats-grid {
    gap: var(--composer-gap-md);

    .stat-item .stat-header .stat-value {
      .stat-prefix,
      .stat-number,
      .stat-suffix {
        font-size: 3rem;
      }
    }
  }
}

